--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "@slack/bolt": "^3.17.1",
     "dotenv": "^16.4.1"
+  },
+  "scripts": {
+    "start": "node app.js"
   }
 }
