--- a/package.json
+++ b/package.json
@@ -4,15 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@slack/bolt": "^3.17.1",
-    "dotenv": "^16.4.1"
-  },
-  "scripts": {
-    "start": "node app.js"
+    "dotenv": "^16.4.1",
+    "openai": "^4.26.0"
   }
 }
