--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@slack/bolt": "^3.17.1",
     "dotenv": "^16.4.1",
-    "openai": "^4.26.0"
+    "openai": "^4.26.0",
+    "redis": "^4.6.12"
   }
 }
